--- a/index.html
+++ b/index.html
@@ -26,15 +26,39 @@
                 <div class="wrapper w-full aspect-430/243 mx-[1%] mt-[0.5%]">
                     <!-- for responsivity, turn w-full to h-full when screen max-height reaches the wrapper height -->
                     <div class="rooms grid h-full bg/-[#0011ff96]">
-                        <div id="room-1" class="room"></div>
+                        <div id="room-1" class="room">
+                            <span>Conference Room</span>
+                            <div class="asigned-workers"></div>
+                            <button class="btn btn--small">+</button>
+                        </div>
                         <div id="passage-1" class="passage"></div>
-                        <div id="room-2" class="room"></div>
-                        <div id="room-3" class="room"></div>
-                        <div id="room-4" class="room"></div>
+                        <div id="room-2" class="room">
+                            <span>Servers Room</span>
+                            <div class="asigned-workers"></div>
+                            <button class="btn btn--small">+</button>
+                        </div>
+                        <div id="room-3" class="room">
+                            <span>Security Room</span>
+                            <div class="asigned-workers"></div>
+                            <button class="btn btn--small">+</button>
+                        </div>
+                        <div id="room-4" class="room">
+                            <span>Reception</span>
+                            <div class="asigned-workers"></div>
+                            <button class="btn btn--small">+</button>
+                        </div>
                         <div id="passage-2" class="passage"></div>
                         <div id="passage-3" class="passage"></div>
-                        <div id="room-5" class="room"></div>
-                        <div id="room-6" class="room"></div>
+                        <div id="room-5" class="room">
+                            <span>Staff Room</span>
+                            <div class="asigned-workers"></div>
+                            <button class="btn btn--small">+</button>
+                        </div>
+                        <div id="room-6" class="room">
+                            <span>Vault</span>
+                            <div class="asigned-workers"></div>
+                            <button class="btn btn--small">+</button>
+                        </div>
                     </div>
                 </div>
             </div>
