--- a/index.html
+++ b/index.html
@@ -5,18 +5,234 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="assets/css/styles.css" />
         <script src="assets/js/workersCRUD.js" defer></script>
+        <!-- flow-bite script -->
+        <script
+            src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"
+            defer
+        ></script>
         <title>WorkSpace Staff Manager</title>
     </head>
     <body>
         <main
             class="container flex bg-(--bg-secondary-clr) h-dvh min-w-dvw overflow-y-hidden p-(--padding-g) min-h-[300px]"
         >
+            <!-- Main modal -->
+            <div
+                id="crud-modal"
+                tabindex="-1"
+                aria-hidden="true"
+                class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-full max-h-full bg-[rgba(0,0,0,0.6)]"
+            >
+                <div class="relative p-4 w-[80%] max-h-full">
+                    <!-- Modal content -->
+                    <div class="relative bg-white rounded-lg shadow-sm">
+                        <!-- Modal header -->
+                        <div
+                            class="flex items-center justify-between p-4 md:p-5 border-b rounded-t border-gray-200"
+                        >
+                            <h2 class="">Add Worker</h2>
+                            <button
+                                type="button"
+                                class="text-(--accent-clr) bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center"
+                                data-modal-toggle="crud-modal"
+                            >
+                                <svg
+                                    class="w-3 h-3"
+                                    aria-hidden="true"
+                                    xmlns="http://www.w3.org/2000/svg"
+                                    fill="none"
+                                    viewBox="0 0 14 14"
+                                >
+                                    <path
+                                        stroke="currentColor"
+                                        stroke-linecap="round"
+                                        stroke-linejoin="round"
+                                        stroke-width="2"
+                                        d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"
+                                    />
+                                </svg>
+                                <span class="sr-only">Close modal</span>
+                            </button>
+                        </div>
+                        <!-- Modal body -->
+                        <form id="add-worker-modal" class="p-4 md:p-5">
+                            <div class="grid gap-4 mb-4 grid-cols-2">
+                                <div class="col-span-1">
+                                    <!-- try to add later @min-[50rem]:col-span-2 -->
+                                    <label for="name" class="">Name:</label>
+                                    <input
+                                        type="text"
+                                        name="name"
+                                        id="name"
+                                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5"
+                                        placeholder="Full Name"
+                                    />
+                                </div>
+                                <div class="col-span-1">
+                                    <!-- try to add later @min-[50rem]:col-span-2 -->
+                                    <label for="role" class="">Role:</label>
+                                    <select
+                                        id="role"
+                                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5"
+                                    >
+                                        <option selected>Select role</option>
+                                        <option value="1">Receptionist</option>
+                                        <option value="2">IT Technician</option>
+                                        <option value="3">
+                                            Security Officer
+                                        </option>
+                                        <option value="4">Manager</option>
+                                        <option value="5">Cleaner</option>
+                                        <option value="6">Other</option>
+                                    </select>
+                                </div>
+                                <div class="col-span-1">
+                                    <!-- try to add later @min-[50rem]:col-span-2 -->
+                                    <label for="email" class="">Email:</label>
+                                    <input
+                                        type="email"
+                                        name="email"
+                                        id="email"
+                                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5"
+                                        placeholder="example@domaine.com"
+                                    />
+                                </div>
+                                <div class="col-span-1">
+                                    <!-- try to add later @min-[50rem]:col-span-2 -->
+                                    <label for="phone" class="">Phone:</label>
+                                    <input
+                                        type="tel"
+                                        name="phone"
+                                        id="phone"
+                                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5"
+                                        placeholder="(+111) 89745678323127"
+                                    />
+                                </div>
+                                <div class="col-span-2">
+                                    <label for="pic" class=""
+                                        >Photo (URL):</label
+                                    >
+                                    <input
+                                        type="url"
+                                        name="pic"
+                                        id="pic"
+                                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5"
+                                        placeholder="https://"
+                                    />
+                                </div>
+                                <div
+                                    class="photo-preview col-span-2 flex justify-center"
+                                    id="pic-prev"
+                                >
+                                    <img
+                                        src="#"
+                                        alt="Photo Preview"
+                                        class="img img--modal"
+                                    />
+                                </div>
+                                <div class="col-span-2">
+                                    <label for="experiences" class=""
+                                        >Experiences:</label
+                                    >
+                                    <div
+                                        id="experiences"
+                                        class="duplicable-area flex flex-col bg-[color-mix(in_oklab,var(--accent-clr)_10%,transparent_90%)] p-(--padding-exp) gap-4 rounded-(--b-r)"
+                                    >
+                                        <div class="col-span-2 -mt-1">
+                                            <label for="exp__company" class=""
+                                                >Company:</label
+                                            >
+                                            <input
+                                                type="text"
+                                                name="exp__company"
+                                                id="exp__company"
+                                                class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5"
+                                                placeholder="Company Name"
+                                            />
+                                        </div>
+                                        <div class="col-span-2">
+                                            <label for="exp__role" class=""
+                                                >Role:</label
+                                            >
+                                            <input
+                                                type="text"
+                                                name="exp__role"
+                                                id="exp__role"
+                                                class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5"
+                                                placeholder="e.g: Manager, Devlopper..."
+                                            />
+                                        </div>
+                                        <div class="col-span-2">
+                                            <label for="exp__from" class=""
+                                                >From:</label
+                                            >
+                                            <input
+                                                type="date"
+                                                name="exp__from"
+                                                id="exp__from"
+                                                class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5"
+                                            />
+                                        </div>
+                                        <div class="col-span-2">
+                                            <label for="exp__to" class=""
+                                                >To:</label
+                                            >
+                                            <input
+                                                type="date"
+                                                name="exp__to"
+                                                id="exp__to"
+                                                class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5"
+                                            />
+                                        </div>
+                                    </div>
+                                    <div class="exp__btns">
+                                        <button
+                                            id="add-experience"
+                                            class="btn btn--modal btn--exp mt-4 ml-2"
+                                        >
+                                            Add Another Experience
+                                        </button>
+                                    </div>
+                                    <!-- <textarea
+                                        id="description"
+                                        rows="4"
+                                        class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500"
+                                        placeholder="Write product description here"
+                                    ></textarea> -->
+                                </div>
+                            </div>
+                            <div class="btns flex justify-end gap-1">
+                                <button
+                                    id="save-worker"
+                                    type="submit"
+                                    class="btn btn--primary focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium text-center relative top-1 btn--modal inline-flex items-center justify-center"
+                                >
+                                    Save Worker
+                                </button>
+                                <button
+                                    type="button"
+                                    class="btn btn--secondary focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium text-center relative top-1 btn--modal inline-flex items-center justify-center"
+                                    data-modal-toggle="crud-modal"
+                                >
+                                    Cancel
+                                </button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+
             <aside
                 class="flex-1 bg-(--bg-primary-clr) rounded-(--b-r) flex flex-col p-(--padding-bigger)"
             >
                 <h2>Staff Members</h2>
                 <div id="aside-workers"></div>
-                <button id="add-worker" class="btn btn--primary mt-auto">
+                <button
+                    id="add-worker"
+                    class="btn btn--primary mt-auto"
+                    data-modal-target="crud-modal"
+                    data-modal-toggle="crud-modal"
+                >
                     Add New Worker
                 </button>
             </aside>
@@ -55,7 +271,7 @@
                             <button class="btn btn--small">+</button>
                         </div>
                         <div id="room-6" class="room">
-                            <span>Vault</span>
+                            <span>Archive Room</span>
                             <div class="asigned-workers"></div>
                             <button class="btn btn--small">+</button>
                         </div>
