--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="assets/css/styles.css" />
-        <script src="assets/js/workersCRUD.js" defer></script>
-        <script src="assets/js/sideBarCollapse.js" defer></script>
+        <script src="assets/js/app.js" type="module" defer></script>
         <!-- flow-bite script -->
         <!-- <script
             src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"
             defer
         ></script> -->
+        <!-- <script src="assets/js/validation.js" defer></script> -->
         <title>WorkSpace Staff Manager</title>
     </head>
     <body>
@@ -34,7 +34,7 @@
                             <h2>Add Worker</h2>
                             <button
                                 type="button"
-                                class="close__modal text-(--accent-clr) bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center"
+                                class="close__modal text-(--accent-clr) bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg w-8 h-8 ms-auto inline-flex justify-center items-center"
                             >
                                 <svg
                                     class="w-3 h-3"
@@ -58,32 +58,34 @@
                         <form id="add-worker-modal" class="p-4 md:p-5">
                             <div class="grid gap-4 mb-4 grid-cols-2">
                                 <div class="col-span-1 hidden">
-                                    <!-- try to add later @min-[50rem]:col-span-2 -->
                                     <input
                                         type="hidden"
                                         name="id"
                                         id="id"
                                         value=""
-                                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5"
+                                        class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5"
                                     />
                                 </div>
+
                                 <div class="col-span-1">
-                                    <!-- try to add later @min-[50rem]:col-span-2 -->
                                     <label for="name" class="">Name:</label>
                                     <input
                                         type="text"
                                         name="name"
                                         id="name"
-                                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5"
+                                        class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5"
                                         placeholder="Full Name"
                                     />
+                                    <span
+                                        class="error-span danger hidden"
+                                    ></span>
                                 </div>
+
                                 <div class="col-span-1">
-                                    <!-- try to add later @min-[50rem]:col-span-2 -->
                                     <label for="role" class="">Role:</label>
                                     <select
                                         id="role"
-                                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5"
+                                        class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5"
                                     >
                                         <option selected value="">
                                             Select role
@@ -97,29 +99,39 @@
                                         <option value="5">Cleaner</option>
                                         <option value="6">Other</option>
                                     </select>
+                                    <span
+                                        class="error-span danger hidden"
+                                    ></span>
                                 </div>
+
                                 <div class="col-span-1">
-                                    <!-- try to add later @min-[50rem]:col-span-2 -->
                                     <label for="email" class="">Email:</label>
                                     <input
                                         type="email"
                                         name="email"
                                         id="email"
-                                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5"
+                                        class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5"
                                         placeholder="example@domaine.com"
                                     />
+                                    <span
+                                        class="error-span danger hidden"
+                                    ></span>
                                 </div>
+
                                 <div class="col-span-1">
-                                    <!-- try to add later @min-[50rem]:col-span-2 -->
                                     <label for="phone" class="">Phone:</label>
                                     <input
                                         type="tel"
                                         name="phone"
                                         id="phone"
-                                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5"
-                                        placeholder="(+111) 89745678323127"
+                                        class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5"
+                                        placeholder="+11189745678323127"
                                     />
+                                    <span
+                                        class="error-span danger hidden"
+                                    ></span>
                                 </div>
+
                                 <div class="col-span-2">
                                     <label for="pic" class=""
                                         >Photo (URL):</label
@@ -128,20 +140,25 @@
                                         type="url"
                                         name="pic"
                                         id="pic"
-                                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5"
+                                        class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5"
                                         placeholder="https://"
                                     />
+                                    <span
+                                        class="error-span danger hidden"
+                                    ></span>
                                 </div>
+
                                 <div
                                     class="photo-preview col-span-2 flex justify-center"
                                     id="pic-prev"
                                 >
                                     <img
-                                        src="#"
+                                        src="assets/images/imgPlaceHolder.svg"
                                         alt="Photo Preview"
                                         class="img img--modal"
                                     />
                                 </div>
+
                                 <div class="col-span-2 flex flex-col gap-2">
                                     <label for="experiences" class=""
                                         >Experiences:</label
@@ -156,51 +173,67 @@
                                         >
                                             <div class="col-span-2 -mt-1">
                                                 <label
-                                                    for="exp__company"
+                                                    for="exp__company_1"
                                                     class=""
                                                     >Company:</label
                                                 >
                                                 <input
                                                     type="text"
-                                                    name="exp__company"
-                                                    id="exp__company"
-                                                    class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5"
+                                                    name="exp__company_1"
+                                                    id="exp__company_1"
+                                                    class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5"
                                                     placeholder="Company Name"
                                                 />
+                                                <span
+                                                    class="error-span danger hidden"
+                                                ></span>
                                             </div>
                                             <div class="col-span-2">
-                                                <label for="exp__role" class=""
+                                                <label
+                                                    for="exp__role_1"
+                                                    class=""
                                                     >Role:</label
                                                 >
                                                 <input
                                                     type="text"
-                                                    name="exp__role"
-                                                    id="exp__role"
-                                                    class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5"
+                                                    name="exp__role_1"
+                                                    id="exp__role_1"
+                                                    class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5"
                                                     placeholder="e.g: Manager, Devlopper..."
                                                 />
+                                                <span
+                                                    class="error-span danger hidden"
+                                                ></span>
                                             </div>
                                             <div class="col-span-2">
-                                                <label for="exp__from" class=""
+                                                <label
+                                                    for="exp__from_1"
+                                                    class=""
                                                     >From:</label
                                                 >
                                                 <input
                                                     type="date"
-                                                    name="exp__from"
-                                                    id="exp__from"
-                                                    class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5"
+                                                    name="exp__from_1"
+                                                    id="exp__from_1"
+                                                    class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5"
                                                 />
+                                                <span
+                                                    class="error-span danger hidden"
+                                                ></span>
                                             </div>
                                             <div class="col-span-2">
-                                                <label for="exp__to" class=""
+                                                <label for="exp__to_1" class=""
                                                     >To:</label
                                                 >
                                                 <input
                                                     type="date"
-                                                    name="exp__to"
-                                                    id="exp__to"
-                                                    class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5"
+                                                    name="exp__to_1"
+                                                    id="exp__to_1"
+                                                    class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5"
                                                 />
+                                                <span
+                                                    class="error-span danger hidden"
+                                                ></span>
                                             </div>
                                         </div>
                                     </div>
@@ -214,21 +247,24 @@
                                         </button>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="btns flex justify-end gap-1">
-                                <button
-                                    id="save-worker"
-                                    type="submit"
-                                    class="close__modal btn btn--primary font-medium text-center relative top-1 btn--modal inline-flex items-center justify-center"
+
+                                <div
+                                    class="btns flex justify-end gap-1 col-span-2"
                                 >
-                                    Save Worker
-                                </button>
-                                <button
-                                    type="button"
-                                    class="close__modal btn btn--secondary font-medium text-center relative top-1 btn--modal inline-flex items-center justify-center"
-                                >
-                                    Cancel
-                                </button>
+                                    <button
+                                        id="save-worker"
+                                        type="submit"
+                                        class="btn btn--primary font-medium text-center relative top-1 btn--modal inline-flex items-center justify-center"
+                                    >
+                                        Save Worker
+                                    </button>
+                                    <button
+                                        type="button"
+                                        class="close__modal btn btn--secondary font-medium text-center relative top-1 btn--modal inline-flex items-center justify-center"
+                                    >
+                                        Cancel
+                                    </button>
+                                </div>
                             </div>
                         </form>
                     </div>
