feat: assign workers and removing them from the list when assigned

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             >
                 <div class="relative p-4 w-[60%] max-h-full">
                     <!-- Modal content -->
-                    <div class="relative bg-white rounded-lg shadow-sm">
+                    <article class="relative bg-white rounded-lg shadow-sm">
                         <!-- Modal header -->
                         <div
                             class="flex items-center justify-between p-4 md:p-5 border-b rounded-t border-gray-200"
@@ -268,7 +268,7 @@
                                 </div>
                             </div>
                         </form>
-                    </div>
+                    </article>
                 </div>
             </div>
             <!-- After Forum Modal -->
@@ -281,7 +281,7 @@
                 class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-full max-h-full bg-[rgba(0,0,0,0.6)]"
             >
                 <div class="relative p-4 w-[60%] max-h-full">
-                    <div class="relative bg-white rounded-lg shadow-sm">
+                    <article class="relative bg-white rounded-lg shadow-sm">
                         <!-- Modal header -->
                         <div
                             class="flex items-center justify-between p-4 md:p-5 border-b rounded-t border-gray-200"
@@ -319,21 +319,16 @@
                         <div class="modal__body p-4 md:p-5">
                             <div
                                 id="worker-list"
-                                class="flex flex-col gap-3 max-h-72 overflow-y-auto"
+                                class="flex flex-col gap-3 max-h-[27rem] overflow-y-auto"
+                            ></div>
+                            <button
+                                id="assign-worker-btn"
+                                class="btn btn--primary mt-3 w-full"
                             >
-                                <!-- Worker items will be injected here by JS -->
-                                <!-- Example:
-                    <div class="worker-item flex items-center gap-3 bg-[color-mix(in_oklab,var(--accent-clr)_10%,transparent_90%)] p-(--padding-g) rounded-(--b-r) cursor-pointer hover:shadow hover:ring-2 hover:ring-blue-200 transition">
-                        <img src="PHOTO_URL" alt="WORKER NAME" class="w-10 h-10 rounded-full border border-gray-300 object-cover" />
-                        <div class="flex flex-col">
-                            <span class="font-semibold text-gray-900">Brent Sweeney</span>
-                            <span class="text-sm text-gray-500">it</span>
+                                Assign Worker
+                            </button>
                         </div>
-                    </div>
-                    -->
-                            </div>
-                        </div>
-                    </div>
+                    </article>
                 </div>
             </div>
             <!-- After Asign Modal -->
@@ -372,7 +367,7 @@
                     id="aside-workers"
                     class="flex flex-col gap-3 overflow-y-auto overflow-x-clip"
                 ></div>
-                <button id="add-worker" class="btn btn--primary mt-auto">
+                <button id="add-worker" class="btn btn--primary mt-auto w-full">
                     Add New Worker
                 </button>
             </aside>
@@ -384,7 +379,7 @@
                     <div id="rooms" class="rooms grid h-full bg/-[#0011ff96]">
                         <div id="room-1" class="room">
                             <span>Conference Room</span>
-                            <div class="asigned-workers"></div>
+                            <div class="assigned-workers"></div>
                             <button data-type="add" class="btn btn--small">
                                 +
                             </button>
@@ -392,37 +387,37 @@
                         <div id="passage-1" class="passage"></div>
                         <div id="room-2" class="room room--danger">
                             <span>Servers Room</span>
-                            <div class="asigned-workers"></div>
+                            <div class="assigned-workers"></div>
                             <button data-type="add" class="btn btn--small">
                                 +
                             </button>
                         </div>
                         <div id="room-3" class="room room--danger">
                             <span>Security Room</span>
-                            <div class="asigned-workers"></div>
+                            <div class="assigned-workers"></div>
                             <button data-type="add" class="btn btn--small">
                                 +
                             </button>
                         </div>
-                        <div id="room-4" class="room">
+                        <div id="room-4" class="room room--danger">
                             <span>Reception</span>
-                            <div class="asigned-workers"></div>
+                            <div class="assigned-workers"></div>
                             <button data-type="add" class="btn btn--small">
                                 +
                             </button>
                         </div>
                         <div id="passage-2" class="passage"></div>
                         <div id="passage-3" class="passage"></div>
-                        <div id="room-5" class="room room--danger">
+                        <div id="room-5" class="room">
                             <span>Staff Room</span>
-                            <div class="asigned-workers"></div>
+                            <div class="assigned-workers"></div>
                             <button data-type="add" class="btn btn--small">
                                 +
                             </button>
                         </div>
                         <div id="room-6" class="room room--danger">
                             <span>Archive Room</span>
-                            <div class="asigned-workers"></div>
+                            <div class="assigned-workers"></div>
                             <button data-type="add" class="btn btn--small">
                                 +
                             </button>
