feat: local storage for assigned workers

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         <main
-            class="container flex bg-(--bg-secondary-clr) h-dvh min-w-dvw p-(--padding-g) min-h-[300px]"
+            class="container flex bg-(--bg-secondary-clr) h-dvh min-w-dvw p-(--padding-g)"
         >
             <!-- Before Forum Modal -->
             <div
@@ -336,7 +336,7 @@
                 id="sidebar"
                 class="flex-1 bg-(--bg-primary-clr) rounded-(--b-r) flex flex-col p-(--padding-bigger) transition-all duration-500 gap-5"
             >
-                <div class="aside__top flex relative min-w-[15px]">
+                <div class="aside__top flex relative min-w-[15px] min-h-[36px]">
                     <h2>Staff Members</h2>
                     <button
                         id="sidebar__btn"
@@ -372,7 +372,7 @@
                 </button>
             </aside>
             <div
-                class="center flex-3 m-(--padding-g) flex justify-center items-center"
+                class="center flex-3 m-(--padding-g) flex justify-center items-center overflow-x-hidden"
             >
                 <div class="wrapper w-full aspect-430/243 mx-[1%] mt-[0.5%]">
                     <!-- for responsivity, turn w-full to h-full when screen max-height reaches the wrapper height -->
